Details on projection and crs

--- a/Discover_Jupyter_with_outputs.ipynb
+++ b/Discover_Jupyter_with_outputs.ipynb
@@ -1015,6 +1015,12 @@
     "\n",
     "Une mauvaise projection peut fausser tous les calculs de distance par exemple (*notamment si vous êtes dans une projection qui fonctionne avec des degrés et que vous voulez utiliser des mètres*).\n",
     "\n",
+    "> Pour les plus curieux, des détails en image (*ci-dessous*) et [ici](https://gis.stackexchange.com/questions/664/whats-the-difference-between-a-projection-and-a-datum)). Ce qu'il faut retenir:\n",
+    "    - référentiel => crs (mètres ou degrés)\n",
+    "    - projection => affichage \n",
+    "    \n",
+    "![projection](https://i.stack.imgur.com/sSI68.gif)\n",
+    "\n",
     "Bon notez qu'on peut utiliser directement Matplotlib quand même pour un premier aperçu ! \n",
     "\n",
     "> Alors petit avertissement pour les foufous qui voudraient tester Bokeh dans toute sa splendeur, il faut savoir que certains widgets qui lancent des fonctions d'update ne fonctionneront pas dans un notebook, il faudra lancer une appplication via Bokeh serve (*ceux que ça intéresse, on pourra en parler ou ils pourront aller se renseigner directement sur le site de Bokeh*)"
